removed scrollbar & fixed card display issue

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -17,6 +17,20 @@ body {
     }
 }
 
+*::-webkit-scrollbar {
+    display: none;
+    width: 1em;
+  }
+   
+  *::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  *::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  }
+
 p {
     font-size: 16px;
     color: $body-color;
